<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.webexz.sicav.Login">

    <android.support.v7.widget.Toolbar xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#a8172a"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="@string/app_name"
        app:subtitle="@string/subtitulo"
        app:titleTextColor="@android:color/white"
        app:subtitleTextColor="@android:color/white"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="8"
        android:id="@+id/txt_username"
        android:layout_alignBaseline="@+id/textView7"
        android:layout_alignBottom="@+id/textView7"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="11dp"
        android:layout_marginEnd="11dp"
        tools:ignore="HardcodedText" />

    <TextView
        android:text="@string/username"
        android:textColor="@color/cast_intro_overlay_background_color"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="63dp"
        android:id="@+id/textView7"
        android:layout_below="@+id/textView6"
        android:layout_toLeftOf="@+id/textView6"
        android:layout_toStartOf="@+id/textView6" />

    <Button
        android:text="@string/btn_login"
        android:ems="8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/acceder"
        android:textColor="@color/cast_expanded_controller_text_color"
        android:background="@color/wallet_hint_foreground_holo_light"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="135dp" />

    <TextView
        android:text="@string/password"
        android:textColor="@color/cast_intro_overlay_background_color"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView8"
        android:layout_alignBottom="@+id/txt_password"
        android:layout_alignLeft="@+id/textView7"
        android:layout_alignStart="@+id/textView7" />

    <TextView
        android:text="@string/title_login"
        android:textColor="#000"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        tools:ignore="UnknownId"
        android:layout_marginTop="24dp"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="8"
        android:id="@+id/txt_password"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/txt_username"
        android:layout_alignStart="@+id/txt_username" />
</RelativeLayout>
