<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.webexz.sicav.Home"
    tools:showIn="@layout/app_bar_home">

    <TextView
        android:text="@string/bienvenido"
        android:textColor="@color/cast_expanded_controller_background_color"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/unidad"
        android:textColor="@color/cast_expanded_controller_background_color"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/unidad"
        android:layout_below="@+id/nombre_agente"
        android:layout_alignLeft="@+id/id"
        android:layout_alignStart="@+id/id"
        android:layout_marginTop="182dp" />

    <TextView
        android:text="@string/id"
        android:textColor="@color/cast_expanded_controller_background_color"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/id"
        android:layout_below="@+id/nombre_agente"
        android:layout_alignLeft="@+id/nombre_agente"
        android:layout_alignStart="@+id/nombre_agente"
        android:layout_marginTop="68dp" />

    <TextView
        android:text="@string/agente"
        android:textColor="@color/cast_expanded_controller_background_color"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="78dp"
        android:id="@+id/nombre_agente"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
