<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_inicio"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.webexz.sicav.Inicio"
    android:background="@android:color/black">

    <!-- Toolbar -->
    <android.support.v7.widget.Toolbar xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#a8172a"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="@string/app_name"
        app:subtitle="@string/subtitulo"
        app:titleTextColor="@android:color/white"
        app:subtitleTextColor="@android:color/white"
        />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/index"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/toolbar">

        <Button
            android:background="#a8172a"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="410dp"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/label_Index"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            android:id="@+id/menu" />
    </LinearLayout>
</RelativeLayout>
